successfully solved the bug

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row" style="margin-top: 100px;">
         <div class="col">
-            <button class="button">STATUS -'OFF'</button>
+            <button class="button">STATUS - OFF</button>
         </div>
     </div>
     </div>
