successfully solved the bug

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
     </div>
     <div class="row" style="margin-top: 100px;">
+        <p class="IOT"style="font-size:1rem">"please take atleast 15 sec gap between two successive clicks"</p>
         <div class="col">
             <button class="button">STATUS - OFF</button>
         </div>
