successfully solved the bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="body">
+<body  onload="myFunction()" class="body">
 
     <div class="container-fluid">
         <div class="row">
@@ -31,10 +31,10 @@
         </div>
     </div>
     <div class="row" style="margin-top: 100px;">
-        <p class="IOT"style="font-size:1rem">"please take atleast 15 sec gap between two successive clicks"</p>
         <div class="col">
             <button class="button">STATUS - OFF</button>
         </div>
+        <p class="IOT"style="font-size:1rem">"please take atleast 15 sec gap between two successive clicks"</p>
     </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
